--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -429,9 +429,11 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
-
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    Advertising of medical devices. It is not a drug. Before use, consult a doctor and read the instructions. Keep out of the reach of children. There are contraindications.<br>
+Coldisept nanoSilver throat spray 20 ml. Declaration of conformity No., version __, valid until ________. <br>Coldisept nanoSilver nasal spray 20 ml. Declaration of Conformity No., version _, valid until ________.<br> Coldisept nanoSilver ear drops 15 ml. Declaration of Conformity No. , version _, valid until ________<br>
+Manufacturer: ARKONA Laboratorium Farmakologii Stomatologicznej Nasutów 99C, 21-025 Niemce, Poland.<br>
+Manufactured for: Alpen Pharma AG, Bern, Switzerland.<br>
+If you want report of an adverse reaction and / or have questions about medical information and / or quality complaints of a medical device ___________, please send an email to the next address: ___________________"
                   </div>
                   <div class="logo2"></div>
                   <div class="logos-mob">
@@ -439,9 +441,9 @@
                     <div class="logo2-mob"></div>
                   </div>
           </div>
-        <p class="vita-disclamer">
+<!--         <p class="vita-disclamer">
             DISCLAIMER
-        </p>
+        </p> -->
       </div>
   </div>
 
