--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -436,9 +436,14 @@
             <div class="vft">
                   <div class="logo1"></div>
                   <div class="vita-footer_text">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
-
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    Реклама медицинских изделий. Не является лекарственным средством. Перед применением необходимо проконсультироваться с врачом и обязательно ознакомиться с инструкцией. Хранить в недоступном для детей месте. Есть противопоказания.<br>
+Колдисепт наноСильвер спрей для горла 20 м. Декларация о соответствии № , версия _ , сроком действия до ________ г..<br>
+Колдисепт наноСильвер спрей назальный 20 мл. Декларация о соответствии № , версия _ , сроком действия до ________ г..<br>
+Колдисепт наноСильвер ушные капли 15 мл. Декларация о соответствии № , версия _ , сроком действия до ________ г..<br>
+Производитель: АРКОНА Лаборатория стоматологической фармакологии Гжегожа Калбарчика, Насутув 99С, 21-025 Немце, Польша.<br>
+Произведено для «Альпен Фарма АГ» (Alpen Pharma AG), Берн, Швейцария.<br>
+Уполномоченный представитель в ______________ : _______________.<br>
+Если Вы хотите сообщить о возникновении побочной реакции и / или есть вопросы по медицинской информации и / или жалобы на качество медицинского изделия ___________, присылайте письма на электронный адрес: ___________________."
                   </div>
                   <div class="logo2"></div>
                   <div class="logos-mob">
@@ -446,9 +451,9 @@
                     <div class="logo2-mob"></div>
                   </div>
           </div>
-        <p class="vita-disclamer">
+<!--         <p class="vita-disclamer">
             ДИСКЛЕЙМЕР
-        </p>
+        </p> -->
       </div>
   </div>
 
