--- a/Coldisept-ua/index-ru.html
+++ b/Coldisept-ua/index-ru.html
@@ -15,6 +15,27 @@
 </head>
 <body>
 
+
+
+    <div class="popup" role="dialog">
+        <div class="popup__overlay" data-action="close"></div>
+        <div class="popup__content">
+          <button class="popup__close-btn" data-action="close">
+            <span class="icon icon_close" rel="img"></span>
+          </button>
+          <div class="popup__body">
+            <p class="popup__message">
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+            </p>
+          </div>
+          <div class="popup__actions">
+            <!-- <button class="btn btn_default" data-action="close">Cancel</button> -->
+          </div>
+        </div>
+      </div>
+
 <!--    start navigation-->
 <a name='top'></a>
     <div class="outer-navigation-container">
@@ -211,7 +232,7 @@
             </div>
             <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, масло мяты перечной, минеральные соли и др.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
+                <a class="btn btn_default" data-action="open">Где купить</a>
                 <a>Инструкция</a>
             </div>
         </div>
@@ -267,7 +288,7 @@
             </div>
             <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, минеральные соли и др.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
+                <a class="btn btn_default" data-action="open">Где купить</a>
                 <a>Инструкция</a>
             </div>
         </div>
@@ -319,7 +340,7 @@
             </div>
             <p><b>Компоненты:</b> наноколлоидное серебро, наноколлоидная медь и др.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
+                <a class="btn btn_default" data-action="open">Где купить</a>
                 <a>Инструкция</a>
             </div>
         </div>
