--- a/Coldisept-ua/index.html
+++ b/Coldisept-ua/index.html
@@ -15,6 +15,26 @@
 </head>
 <body>
 
+
+    <div class="popup" role="dialog">
+        <div class="popup__overlay" data-action="close"></div>
+        <div class="popup__content">
+          <button class="popup__close-btn" data-action="close">
+            <span class="icon icon_close" rel="img"></span>
+          </button>
+          <div class="popup__body">
+            <p class="popup__message">
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+            </p>
+          </div>
+          <div class="popup__actions">
+            <!-- <button class="btn btn_default" data-action="close">Cancel</button> -->
+          </div>
+        </div>
+      </div>
+
 <!--    start navigation-->
 <a name='top'></a>
     <div class="outer-navigation-container">
@@ -211,7 +231,7 @@
             </div>
             <p><b>Складники:</b> наноколоїдне срібло, ірландського моху, масло м'яти перцевої, мінеральні солі та інш.</p>
             <div class="container-5_btns">
-                <a>Де купити</a>
+                <a class="btn btn_default" data-action="open">Де купити</a>
                 <a>Інструкція</a>
             </div>
         </div>
@@ -267,7 +287,7 @@
             </div>
             <p><b>Компоненти:</b> наноколоїдне срібло, ескстракт ірландського моху, мінеральні солі та інш.</p>
             <div class="container-5_btns">
-                <a>Де купити</a>
+                <a class="btn btn_default" data-action="open">Де купити</a>
                 <a>Інструкція</a>
             </div>
         </div>
@@ -319,7 +339,7 @@
             </div>
             <p><b>Складники:</b> наноколоїдне срібло, наноколоїдна мідь та інш.</p>
             <div class="container-5_btns">
-                <a>Де купити</a>
+                <a class="btn btn_default" data-action="open">Де купити</a>
                 <a>Інструкція</a>
             </div>
         </div>
