--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -15,6 +15,27 @@
 </head>
 <body>
 
+
+
+    <div class="popup" role="dialog">
+        <div class="popup__overlay" data-action="close"></div>
+        <div class="popup__content">
+          <button class="popup__close-btn" data-action="close">
+            <span class="icon icon_close" rel="img"></span>
+          </button>
+          <div class="popup__body">
+            <p class="popup__message">
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+              <div class="apt apt-1"></div>
+            </p>
+          </div>
+          <div class="popup__actions">
+            <!-- <button class="btn btn_default" data-action="close">Cancel</button> -->
+          </div>
+        </div>
+      </div>
+
 <!--    start navigation-->
 <a name='top'></a>
     <div class="outer-navigation-container">
@@ -210,7 +231,7 @@
             </div>
             <p><b>Components:</b> nanocolloid silver, Chondrus crispus extract, peppermint oil, mineral salts etc.</p>
             <div class="container-5_btns">
-                <a>Instruction</a>
+                <a class="btn btn_default" data-action="open">Instruction</a>
                 <a>BUY</a>
             </div>
         </div>
@@ -265,7 +286,7 @@
 
             <p><b>Components:</b> nanocolloid silver, Chondrus crispus extract, mineral salts etc.</p>
             <div class="container-5_btns">
-                <a>Instruction</a>
+                <a class="btn btn_default" data-action="open">Instruction</a>
                 <a>BUY</a>
             </div>
         </div>
@@ -312,7 +333,7 @@
             </div>
             <p><b>Components:</b> nanocolloid silver, nanocolloid copper etc.</p>
             <div class="container-5_btns">
-                <a>Instruction</a>
+                <a class="btn btn_default" data-action="open">Instruction</a>
                 <a>BUY</a>
             </div>
         </div>
