--- a/Coldisept-ua/index.html
+++ b/Coldisept-ua/index.html
@@ -153,7 +153,7 @@
             <div class="container-2_plate">
                 <p class="container-2_plate-title">НЕЖИТЬ</p>
                 <p>
-                    Риносинусити, інфекційні та алергічні риніти
+                    Синусити, інфекційні та алергічні риніти
                 </p>
             </div>
             <div class="container-2_plate">
@@ -265,7 +265,7 @@
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
-                <b>Застосовується при:</b> інфекційному, алергічному або атрофічному ринітах; як підтримуюче лікування риносинуситу; вживанні препаратів, які пошкоджують епітелій слизової оболонки носа та інш.
+                <b>Застосовується при:</b> інфекційному, алергічному або атрофічному ринітах; як підтримуюче лікування синуситу; вживанні препаратів, які пошкоджують епітелій слизової оболонки носа та інш.
             </p>
             <p>(повний перелік показань до застосування знаходиться в інструкції)</p>
             <p>
