--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -156,7 +156,7 @@
             <div class="container-2_plate">
                 <p class="container-2_plate-title">Насморк</p>
                 <p>
-                    Риносинуситы, инфекционные и аллергические риниты
+                    Синуситы, инфекционные и аллергические риниты
                 </p>
             </div>
             <div class="container-2_plate">
@@ -268,7 +268,7 @@
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
-                <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение риносинусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
+                <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
             <p>(полный перечень показаний к применений находится в инструкции)</p>
             <p>
