--- a/Coldisept-ua/index-ru.html
+++ b/Coldisept-ua/index-ru.html
@@ -233,7 +233,7 @@
             <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, масло мяты перечной, минеральные соли и др.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Где купить</a>
-                <a>Инструкция</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver throat spray INSTR_17-05-2021.pdf">Инструкция</a>
             </div>
         </div>
         <div class="container-5_img-block container-5_img-block-ru">
@@ -289,7 +289,8 @@
             <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, минеральные соли и др.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Где купить</a>
-                <a>Инструкция</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver nasal spray ulotka_17-05-2021.pdf">Инструкция</a>
+                
             </div>
         </div>
         <div class="container-5_img-block container-5_img-block-ru">
@@ -341,7 +342,8 @@
             <p><b>Компоненты:</b> наноколлоидное серебро, наноколлоидная медь и др.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Где купить</a>
-                <a>Инструкция</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver ear drops IFU_17-05-2021.pdf">Инструкция</a>
+
             </div>
         </div>
         <div class="container-5_img-block container-5_img-block-ru">
