--- a/Coldisept-ua/index.html
+++ b/Coldisept-ua/index.html
@@ -210,7 +210,7 @@
             </h2>
             <div class="mob-container-5_img-block"></div>
             <p>
-                <b>Застосовується при:</b> запаленні слизових оболонок порожнини рота та горла ; запаленні мигдаликів; стану після видалення мигдаликів.
+                <b>Застосовується при:</b> запаленні слизових оболонок порожнини рота та глотки; запаленні мигдаликів; стану після видалення мигдаликів.
             </p>
             <p>
                 <b>Переваги:</b>
@@ -229,10 +229,10 @@
                     <p>НЕ МІСТИТЬ СПИРТУ ТА АНТИБІОТИКІВ</p>
                 </div>
             </div>
-            <p><b>Складники:</b> наноколоїдне срібло, ірландського моху, масло м'яти перцевої, мінеральні солі та інш.</p>
+            <p><b>Складники:</b> наноколоїдне срібло, екстракт ірландського моху, масло м'яти перцевої, мінеральні солі та інш.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Де купити</a>
-                <a>Інструкція</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver throat spray INSTR_17-05-2021.pdf">Інструкція</a>
             </div>
         </div>
         <div class="container-5_img-block">
@@ -265,7 +265,7 @@
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
-                <b>Застосовується при:</b> інфекційному, алергічному або атрофічному ринітах; як підтримуюче лікування синуситу; вживанні препаратів, які пошкоджують епітелій слизової оболонки носа та інш.
+                <b>Застосовується при:</b> запаленні зовнішнього слухового проходу, що викликане бактеріальними та грибковими інфекціями.
             </p>
             <p>(повний перелік показань до застосування знаходиться в інструкції)</p>
             <p>
@@ -288,7 +288,8 @@
             <p><b>Компоненти:</b> наноколоїдне срібло, ескстракт ірландського моху, мінеральні солі та інш.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Де купити</a>
-                <a>Інструкція</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver nasal spray ulotka_17-05-2021.pdf">Інструкція</a>
+                
             </div>
         </div>
         <div class="container-5_img-block">
@@ -340,7 +341,8 @@
             <p><b>Складники:</b> наноколоїдне срібло, наноколоїдна мідь та інш.</p>
             <div class="container-5_btns">
                 <a class="btn btn_default" data-action="open">Де купити</a>
-                <a>Інструкція</a>
+                <a target="_blank" href="./UA Coldisept nanoSilver ear drops IFU_17-05-2021.pdf">Інструкція</a>
+                
             </div>
         </div>
         <div class="container-5_img-block">
@@ -458,15 +460,24 @@
                   <div class="vita-footer_text">
                     Реклама медичного виробу. Перед застосуванням необхідно обов’язково ознайомитися з інструкцією із застосування медичного виробу та проконсультуватись із лікарем. Є протипоказання та побічні реакції. Зберігати у місцях недоступних для дітей. Декларація про відповідність: Колдісепт наноСільвер, спрей для горла - №CNSTS01 від 10.02.2021 Версія – 1.0.; Колдісепт наноСільвер, назальний спрей - №CNSNS01  від 10.02.2021 року Версія – 1.0.; Колдісепт наноСільвер, вушні краплі - №CNSED01  від 10.02.2021   Версія – 1.0. Виробник: АРКОНА Лабораторія Стоматологічної Фармакології Гжегожа Калбарчика, Польща. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість медичного виробу Колдісепт наноСільвер, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com»
                   </div>
-                  <div class="logo2"></div>
+                  <div class="logo2">
+                      <p>
+                          Альпен Фарма АГ"(Alpen Pharma AG), Берн, Швейцарія
+                      </p>
+                  </div>
                   <div class="logos-mob">
                     <div class="logo1-mob"></div>
-                    <div class="logo2-mob"></div>
+                    <div class="logo2-mob">
+                        <p>
+                          Альпен Фарма АГ"(Alpen Pharma AG), Берн, Швейцарія
+                      </p>
+                    </div>
                   </div>
           </div>
-<!--         <p class="vita-disclamer">
-            ДИСКЛЕЙМЕР
-        </p> -->
+        <p class="vita-disclamer">
+            САМОЛІКУВАННЯ МОЖЕ БУТИ
+ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
+        </p>
       </div>
   </div>
 
