--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -468,10 +468,15 @@
 Уполномоченный представитель в ______________ : _______________.<br>
 Если Вы хотите сообщить о возникновении побочной реакции и / или есть вопросы по медицинской информации и / или жалобы на качество медицинского изделия ___________, присылайте письма на электронный адрес: ___________________."
                   </div>
-                  <div class="logo2"></div>
+                  <div class="logo2">
+                      <p>
+                          Альпен Фарма АГ"(Alpen Pharma AG), Берн, Швейцарія
+                      </p>
+                  </div>
                   <div class="logos-mob">
                     <div class="logo1-mob"></div>
-                    <div class="logo2-mob"></div>
+                    <div class="logo2-mob">
+                    </div>
                   </div>
           </div>
 <!--         <p class="vita-disclamer">
