--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -456,7 +456,11 @@ Manufacturer: ARKONA Laboratorium Farmakologii Stomatologicznej Nasutów 99C, 21
 Manufactured for: Alpen Pharma AG, Bern, Switzerland.<br>
 If you want report of an adverse reaction and / or have questions about medical information and / or quality complaints of a medical device ___________, please send an email to the next address: ___________________"
                   </div>
-                  <div class="logo2"></div>
+                  <div class="logo2">
+                      <p>
+                          Альпен Фарма АГ"(Alpen Pharma AG), Берн, Швейцарія
+                      </p>
+                  </div>
                   <div class="logos-mob">
                     <div class="logo1-mob"></div>
                     <div class="logo2-mob"></div>
