--- a/Coldisept-ua/index-ru.html
+++ b/Coldisept-ua/index-ru.html
@@ -461,7 +461,11 @@
                   <div class="vita-footer_text">
                     Реклама медичного виробу. Перед застосуванням необхідно обов’язково ознайомитися з інструкцією із застосування медичного виробу та проконсультуватись із лікарем. Є протипоказання та побічні реакції. Зберігати у місцях недоступних для дітей. Декларація про відповідність: Колдісепт наноСільвер, спрей для горла - №CNSTS01 від 10.02.2021 Версія – 1.0.; Колдісепт наноСільвер, назальний спрей - №CNSNS01  від 10.02.2021 року Версія – 1.0.; Колдісепт наноСільвер, вушні краплі - №CNSED01  від 10.02.2021   Версія – 1.0. Виробник: АРКОНА Лабораторія Стоматологічної Фармакології Гжегожа Калбарчика, Польща. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість медичного виробу Колдісепт наноСільвер, будь ласка, надсилайте листа на електронну адресу: pharmacovigilance-ua@alpenpharma.com»
                   </div>
-                  <div class="logo2"></div>
+                  <div class="logo2">
+                    <p>
+                        Альпен Фарма АГ"(Alpen Pharma AG), Берн, Швейцарія
+                    </p>
+                  </div>
                   <div class="logos-mob">
                     <div class="logo1-mob"></div>
                     <div class="logo2-mob"></div>
