coldi-after-work

--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -282,7 +282,7 @@
                     <p>the use of drugs that damage the epithelium of nasal mucosa etc.</p>
                 </div>
             </div>
-            <p>(a complete list of indications for use is in the instructions).</p>
+            <p class="full-load">(a complete list of indications for use is in the instructions).</p>
 
             <p><b>Components:</b> nanocolloid silver, Chondrus crispus extract, mineral salts etc.</p>
             <div class="container-5_btns">
