--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="shortcut icon" href="./images/logo_pluw 2.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
@@ -270,7 +270,7 @@
             <p>
                 <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
-            <p>(полный перечень показаний к применений находится в инструкции)</p>
+            <p class="full-load">(полный перечень показаний к применений находится в инструкции)</p>
             <p>
                 <b>Преимущества:</b>
             </p>
