coldi-after-work

--- a/Coldisept-ua/index.html
+++ b/Coldisept-ua/index.html
@@ -267,7 +267,7 @@
             <p>
                 <b>Застосовується при:</b> запаленні зовнішнього слухового проходу, що викликане бактеріальними та грибковими інфекціями.
             </p>
-            <p>(повний перелік показань до застосування знаходиться в інструкції)</p>
+            <p class="full-load">(повний перелік показань до застосування знаходиться в інструкції)</p>
             <p>
                 <b>Переваги:</b>
             </p>
